# capydocs

./: .env.example  .gitignore  .mdformat.toml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: minjae.md  mj.md  welcome.md
src/capydocs/: __init__.py  cli.py  mcp_server.py  server.py
src/capydocs/routers/: ai.py  files.py  search.py
src/capydocs/services/: ai.py  filesystem.py  search.py
src/capydocs/static/: index.html
src/capydocs/static/css/: style.css
src/capydocs/static/js/: ai.js  app.js  cm-bundle.js  editor.js  tree.js
tests/: conftest.py  test_ai.py  test_files_api.py  test_filesystem.py  test_multi_root.py  test_search.py
